# Project

./: CMakeLists.txt  Classes.h  Debug.h  Functions.h  Main.cpp  Project.sln  Project.vcxproj  Project.vcxproj.filters  Storage.h  glad.c
Librarys/include/glad/: glad.h
Librarys/lib/: glfw3.lib
